--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="navegação">
             <li><a href="#">Visão Geral</a></li>
             <li><a href="tudo-sobre.html">Tudo Sobre</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
 
         </ul><!--navegação-->
 
